chart/templates/peer-authentication.yaml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: node-example
  namespace: node-example
spec:
  mtls:
    mode: DISABLE
