chart/templates/destination-rule.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: node-example-web-clusterip
  namespace: node-example
spec:
  host: node-example-web-clusterip.node-example.svc.cluster.local
  trafficPolicy:
    tls:
      mode: SIMPLE
