chart/templates/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: node-example-web
  namespace: node-example
spec:
  gateways:
    - istio-system/public
  hosts:
    - node-example.app.advana.cdao.us
  http:
    - route:
        - destination:
            host: node-example-web-clusterip.node-example.svc.cluster.local
            port:
              number: 80
